--- a/webroot/css/navbar_me.css
+++ b/webroot/css/navbar_me.css
@@ -3,7 +3,8 @@
  * Changed to only style li-items instead of a.
  */
 #navbar {
-  margin-bottom: 44px;
+  border-left: 5px solid #9db97e;
+  border-right: 5px solid #9db97e;
 }
 
 .navbar {
